# filesync

./: .gitignore  CMakeLists.txt  Makefile  README.md  pkglist.txt  sshd_config
src/: main.c
src/common/: log.c  log.h  rotate-bits.h  sha256.c  sha256.h
src/fs/: manifest.c  manifest.h  scan.c  scan.h
src/net/: client.c  client.h  server.c  server.h
src/proto/: frame.c  frame.h
src/sync/: diff.c  diff.h
test/: Makefile  integration.sh  sha256test.c
